Fixed social links on mobile

--- a/src/app/components/socials/styles.css
+++ b/src/app/components/socials/styles.css
@@ -1,3 +1,3 @@
 .link {
-  @apply inline-flex w-fit self-start m-5 items-center rounded-md bg-black p-3 border-[#894fad] border-2 text-[#894fad] font-bold hover:border-[#bc77e7] hover:text-[#bc77e7] flex-row justify-around
+  @apply inline-flex w-fit self-start m-5 items-center rounded-md bg-black p-3 border-[#894fad] border-2 text-[#894fad] font-bold hover:border-[#bc77e7] hover:text-[#bc77e7] flex-row justify-center
 }
